# ocaml-gettext

./: .announce  .boring  .gitignore  .headache.config  .header  .ocamlformat-ignore  .travis.yml  CHANGELOG  CHANGES.md  ConfMakefile.in  INSTALL  Makefile  README  README.md  TODO  TopMakefile  TopMakefile.in  aclocal.m4  autogen.sh  ci-main.lua  configure  configure.in  configure.ml  dune-project  dune-workspace.dev  gettext-camomile.opam  gettext-stub.opam  gettext-stub.opam.template  gettext.opam  index.html
debian/: changelog  control  libgettext-ocaml-dev.dirs  libgettext-ocaml.dirs  rules
doc/: Makefile  dune  ocaml-gettext-options.xml  ocaml-gettext.xml  ocaml-xgettext.xml  reference-manual.md  reference-manual.xml
examples/: Makefile
examples/doc/: Makefile  program.xml
examples/gui/: Makefile  dune  gui.glade  gui.ml  guiGettext.ml
examples/po/: Makefile  fr.po  mydomain.pot
examples/program/: Makefile  dune  program.ml  programGettext.ml
gettext/: index.html
gettext-camomile/: index.html
gettext-camomile/GettextCamomile/: index.html
gettext-camomile/GettextCamomile/Charset/: index.html
gettext-camomile/GettextCamomile/Hashtbl/: index.html
gettext-camomile/GettextCamomile/Map/: index.html
gettext-camomile/GettextCamomile/Open/: index.html
gettext-stub/: index.html
gettext-stub/GettextStub/: index.html
gettext-stub/GettextStub/Native/: index.html
gettext-stub/GettextStub/Preload/: index.html
gettext-stub/GettextStubCompat/: index.html
gettext/Gettext/: index.html
gettext/Gettext/Program/: index.html
gettext/GettextCategory/: index.html
gettext/GettextCategory/MapCategory/: index.html
gettext/GettextCharset/: index.html
gettext/GettextCharset/Dummy/: index.html
gettext/GettextCharset/module-type-CHARSET_TYPE/: index.html
gettext/GettextCompat/: index.html
gettext/GettextCompile/: index.html
gettext/GettextConfig/: index.html
gettext/GettextConfigDune/: index.html
gettext/GettextConfigDune/Sites/: index.html
gettext/GettextConfigGen/: index.html
gettext/GettextDomain/: index.html
gettext/GettextDummy/: index.html
gettext/GettextDummy/Generic/: index.html
gettext/GettextFormat/: index.html
gettext/GettextFormat_lexer/: index.html
gettext/GettextFormat_parser/: index.html
gettext/GettextLocale/: index.html
gettext/GettextLocale/Posix/: index.html
gettext/GettextLocale/module-type-LOCALE_TYPE/: index.html
gettext/GettextLocale_lexer/: index.html
gettext/GettextLocale_parser/: index.html
gettext/GettextLocale_types/: index.html
gettext/GettextMo/: index.html
gettext/GettextMo_int32/: index.html
gettext/GettextMo_lexer/: index.html
gettext/GettextMo_parser/: index.html
gettext/GettextModules/: index.html
gettext/GettextPo/: index.html
gettext/GettextPoComment_lexer/: index.html
gettext/GettextPoComment_parser/: index.html
gettext/GettextPo_lexer/: index.html
gettext/GettextPo_parser/: index.html
gettext/GettextPo_utils/: index.html
gettext/GettextRealize/: index.html
gettext/GettextRealize/Generic/: index.html
gettext/GettextTranslate/: index.html
gettext/GettextTranslate/Dummy/: index.html
gettext/GettextTranslate/Hashtbl/: index.html
gettext/GettextTranslate/Map/: index.html
gettext/GettextTranslate/Open/: index.html
gettext/GettextTranslate/module-type-TRANSLATE_TYPE/: index.html
gettext/GettextTypes/: index.html
gettext/GettextTypes/module-type-INIT_TYPE/: index.html
gettext/GettextUtils/: index.html
libgettext-camomile-ocaml/: META  META.in  Makefile  gettextCamomile.ml  gettextCamomile.mli
libgettext-ocaml/: META  META.in  Makefile  gettext.ml  gettext.mli  gettextCamomile.ml  gettextCategory.ml  gettextCharset.ml  gettextCompat.ml  gettextCompat.mli  gettextCompile.ml  gettextConfig.ml.in  gettextDomain.ml  gettextDummy.ml  gettextFormat.ml  gettextFormat_lexer.mll  gettextFormat_parser.mly  gettextGlobal.ml  gettextLocale.ml  gettextLocale_lexer.mll  gettextLocale_parser.mly  gettextLocale_types.ml  gettextLow.ml  gettextMo.ml  gettextMo_int32.ml  gettextMo_lexer.mll  gettextMo_parser.mly  gettextModules.ml  gettextModules.mli  gettextPo.ml  gettextPoComment_parser.mli  gettextPoComment_parser.mly  gettextPo_lexer.mll  gettextPo_parser.mly  gettextPo_utils.ml  gettextRealize.ml  gettextThread.ml  gettextTranslate.ml  gettextTypes.ml  gettextUtils.ml  (+4 more)
libgettext-stub-ocaml/: META  META.in  Makefile  gettextStub.ml  gettextStubCompat.idl  gettextStubCompat.ml  gettextStubCompat_stubs.c
ocaml-gettext/: Makefile  OCamlGettext.ml  ocaml-gettext.ml  xgettext.ml
po/: Makefile  POTFILES  fr.po  ocaml-gettext.pot
src/: META  Makefile  camlgettext.idl  gettext.idl  gettextMo.ml  gettextMo_int32.ml  gettextMo_lexer.mll  gettextMo_parser.mly  gettext_lexer.mlll  gettext_mo.ml  pa_gettext.ml4
src-native/: Makefile  camlgettext.ml  camlgettext_lexer.mll  camlgettext_parser.mly  camlgettext_types.ml  test.ml
src/lib/gettext-camomile/: dune  (+2 more)
src/lib/gettext-stub/: dune  gettextStub.ml  gettextStubCompat.ml  gettextStubCompat_stubs.c
src/lib/gettext/base/: .keep-directory  dune  gettext.ml  gettext.mli  gettextCategory.ml  gettextCompat.ml  gettextCompat.mli  gettextConfig.ml  gettextConfigGen.ml  gettextDummy.ml  gettextFormat.ml  gettextFormat_lexer.mll  gettextFormat_parser.mly  gettextMo.ml  gettextMo_int32.ml  gettextMo_lexer.mll  gettextMo_parser.mly  gettextModules.ml  gettextTypes.ml  gettextUtils.ml
test/: Makefile  TestGettext.ml  bench.ml  benchmark.ml  common.ml  dune  fr.po  invalid_format3.ml  invalid_format4.ml  invalid_format5.ml  multiline-comment.po  prog.pot  test.ml  test.sh  test11.po  test2.po  test4.ml  test4.po  utils.ml  valid_format.ml
test/bench/: bench.ml  dune
test/common/: common.ml  dune
test/test-camomile/: dune  test.ml
test/test-stub/: dune  test.ml
test/testdata/: TestGettext.ml  escape-char.ml  invalid_format1.ml  invalid_format2.ml  test4.ml  unsound_warning.ml
website/: Makefile  layout.xml  ocaml-gettext-documentation.xml  ocaml-gettext-toc.xml  ocaml-gettext.xml  website.xml
(+23 files in other folders)
