##########################################################################
#  Ocaml-gettext : a library to translate messages                       #
#                                                                        #
#  Copyright (C) 2001 Jean-Christophe FILLIATRE                          #
#  Copyright (C) 2003, 2004, 2005 Sylvain Le Gall <sylvain@le-gall.net>  #
#                                                                        #
#  This library is free software; you can redistribute it and/or         #
#  modify it under the terms of the GNU Lesser General Public            #
#  License as published by the Free Software Foundation; either          #
#  version 2.1 of the License, or (at your option) any later version;    #
#  with the OCaml static compilation exception.                          #
#                                                                        #
#  This library is distributed in the hope that it will be useful,       #
#  but WITHOUT ANY WARRANTY; without even the implied warranty of        #
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU     #
#  Lesser General Public License for more details.                       #
#                                                                        #
#  You should have received a copy of the GNU Lesser General Public      #
#  License along with this library; if not, write to the Free Software   #
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307   #
#  USA                                                                   #
#                                                                        #
#  Contact: sylvain@le-gall.net                                          #
##########################################################################

AC_INIT()

AC_ARG_WITH(docdir,
	AC_HELP_STRING([--with-docdir=dir], [Location of documentation ( default is ${datadir}/doc )]),
	DOCDIR=$withval, DOCDIR=${datadir}/doc)

AC_ARG_WITH(builddir,
	AC_HELP_STRING([--with-builddir=dir], [Location of the build ( default is ${topdir}/build )]),
	BUILDDIR=$withval, BUILDDIR=`pwd`/build)

AC_ARG_WITH(defaultlocaledir,
	AC_HELP_STRING([--with-defaultlocaledir=dir], [Location of the default locale dir ( default is /usr/share/locale )]),
	DEFAULTLOCALEDIR="\"$withval\"", DEFAULTLOCALEDIR="\"/usr/share/locale\"")

AC_ARG_WITH(localedir,
	AC_HELP_STRING([--with-localedir=dir], [Additional location of the locale dir ( default is /usr/local/share/locale )]),
	LOCALEDIR=$LOCALEDIR "\"$withval\";", LOCALEDIR="\"/usr/local/share/locale\"")

AC_ARG_WITH(stub-cflags,
	AC_HELP_STRING([--with-stub-cflags=flags], [Flags to use when compiling gettext-stub]),
	STUB_CFLAGS=$withval, STUB_CFLAGS="")

AC_ARG_WITH(stub-ldflags,
        AC_HELP_STRING([--with-stub-ldflags=flags], [Flags to use when linking gettext-stub. Default: -L(OCAMLLIB) -lcamlidl]),
        STUB_LDFLAGS=$withval, STUB_LDFLAGS="")

AC_ARG_WITH(docbook-stylesheet,
        AC_HELP_STRING([--with-docbook-stylesheet=dir], [Where to find the docbook stylesheets]),
        DOCBOOK_STYLESHEET=$withval, DOCBOOK_STYLESHEET="/usr/share/xml/docbook/stylesheet/nwalsh")

AC_ARG_ENABLE(camomile,
        AC_HELP_STRING([--enable-camomile], [Build camomile extension. Default : yes]),
        BUILD_CAMOMILE=$enableval, BUILD_CAMOMILE="yes")

AC_ARG_ENABLE(stub,
        AC_HELP_STRING([--enable-stub], [Build stub extension. Default : yes]),
        BUILD_STUB=$enableval, BUILD_STUB="yes")

AC_ARG_ENABLE(test,
        AC_HELP_STRING([--enable-test], [Build program test. Default : no]),
        BUILD_TEST=$enableval, BUILD_TEST="no")

AC_ARG_ENABLE(bench,
        AC_HELP_STRING([--enable-bench], [Build program benchmark. Default : no]),
        BUILD_BENCH=$enableval, BUILD_BENCH="no")

AC_ARG_ENABLE(doc,
        AC_HELP_STRING([--enable-doc], [Build the documentation. Default : yes]),
        BUILD_DOC=$enableval, BUILD_DOC="yes")

VERSION=0.2.0
DATE=`date`

AC_CHECK_OCAMLC([],[AC_MSG_ERROR(Cannot find ocamlc.)])
AC_CHECK_OCAMLOPT([],[AC_MSG_WARN(Cannot find ocamlopt, byte compilation only)])
AC_CHECK_OCAMLLEX([],[AC_MSG_ERROR(Cannot find ocamllex.)])
AC_CHECK_OCAMLYACC([],[AC_MSG_ERROR(Cannot find ocamlyacc.)])
AC_CHECK_OCAMLFIND([],[AC_MSG_ERROR(Cannot find ocamlfind.)])
AC_CHECK_CAMLP4([],[AC_MSG_ERROR(Cannot find camlp4.)])
AC_CHECK_CAMLIDL([],[AC_MSG_ERROR(Cannot find camlidl.)])
AC_CHECK_OCAMLMKLIB([],[AC_MSG_ERROR(Cannot find ocamlmklib.)])
AC_CHECK_MKCAMLP4([],[AC_MSG_ERROR(Cannot find mkcamlp4.)])

if test "x$BUILD_DOC" = "xyes"; then
  AC_CHECK_OCAMLDOC([],[AC_MSG_ERROR(Cannot find ocamldoc.)])
  AC_CHECK_HTMLXSL($DOCBOOK_STYLESHEET/xhtml/chunk.xsl,[],[AC_MSG_ERROR(Cannot generate HTML pages.)])
  AC_CHECK_MANXSL($DOCBOOK_STYLESHEET/manpages/docbook.xsl,[],[AC_MSG_ERROR(Cannot generate manpages.)])
  AC_CHECK_PDFXSL($DOCBOOK_STYLESHEET/fo/docbook.xsl,[],[AC_MSG_ERROR(Cannot generate PDF files.)])
fi

OCAMLFIND_CHECK_MODULE(fileutils,[],[AC_MSG_ERROR(Cannot find ocaml-fileutils)])

OCAMLFIND_CHECK_MODULE(camomile,[],
[
  if test "x$BUILD_CAMOMILE" = "xyes"; then
    AC_MSG_ERROR(Cannot build libgettext-camomile-ocaml.)
  fi
])

if test "x$BUILD_TEST" = "xyes"; then
  OCAMLFIND_CHECK_MODULE(oUnit,[],[AC_MSG_ERROR(Cannot build test.)])
fi

if test "x$BUILD_BENCH" = "xyes"; then
  OCAMLFIND_CHECK_MODULE(benchmark,[],[AC_MSG_ERROR(Cannot build benchmark)])
fi

AC_LIB_OCAML()

# check if we build at least one of stub | camomile for building ocaml-gettext

if test "$BUILD_STUB" = "no" || test "$BUILD_CAMOMILE" = "no"; then
  if test "$BUILD_TEST" = "yes"; then
    AC_MSG_ERROR(Cannot build test since it depends on both gettext-stub and gettext-camomile)
  fi
  if test "$BUILD_BENCH" = "yes"; then
    AC_MSG_ERROR(Cannot build bench since it depends on both gettext-stub and gettext-camomile)
  fi
fi

# if stub ldflags are not set, set it.

if test "x$STUB_LDFLAGS" = "x"; then
  STUB_LDFLAGS="-L$OCAMLLIB -lcamlidl"
fi

# substitutions to perform
AC_SUBST(BUILDDIR)
AC_SUBST(DOCDIR)
AC_SUBST(EXE)
AC_SUBST(DEFAULTLOCALEDIR)
AC_SUBST(LOCALEDIR)
AC_SUBST(CODESET)
AC_SUBST(DATE)
AC_SUBST(VERSION)
AC_SUBST(STUB_CFLAGS)
AC_SUBST(STUB_LDFLAGS)
AC_SUBST(BUILD_CAMOMILE)
AC_SUBST(BUILD_STUB)
AC_SUBST(BUILD_TEST)
AC_SUBST(BUILD_BENCH)
AC_SUBST(BUILD_DOC)

# Finally create the Makefile from Makefile.in
OUTPUT="ConfMakefile                \
  libgettext-camomile-ocaml/META    \
  libgettext-ocaml/gettextConfig.ml \
  libgettext-ocaml/META             \
  libgettext-stub-ocaml/META"

AC_OUTPUT([$OUTPUT])
