opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/gildor478/ocaml-gettext"
dev-repo: "git+https://github.com/gildor478/ocaml-gettext.git"
bug-reports: "https://github.com/gildor478/ocaml-gettext/issues"
doc: "https://gildor478.github.io/ocaml-gettext/"
build: [
  ["ocaml" "configure.ml"
    "--with-defaultlocaledir" "%{lib}%/gettext/share/locale"
    "--version" version]
  ["dune" "build" "-p" name "-j" jobs
   "@install"
   "@doc" {with-doc}
   "@runtest" {with-test} ]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "2.9.0"}
  "camomile" {>= "2.0.0"}
  "gettext" {= version}
  "ounit2" {with-test & > "2.2.7"}
  "fileutils" {with-test & >= "0.6.6"}
]
synopsis: "Internationalization library using camomile (i18n)"
description:"""
See gettext package description.
"""
