opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/gildor478/ocaml-gettext"
dev-repo: "git+https://github.com/gildor478/ocaml-gettext.git"
bug-reports: "https://github.com/gildor478/ocaml-gettext/issues"
doc: "https://gildor478.github.io/ocaml-gettext/"
build: [
  ["ocaml" "configure.ml"
    "--with-defaultlocaledir" "%{lib}%/gettext/share/locale"
    "--version" version]
  ["dune" "build" "-p" name "-j" jobs
   "@install"
   "@doc" {with-doc}
   "@runtest" {with-test} ]
]
depends: [
  "ocaml"
  "dune" {>= "1.11.0"}
  "base-bytes"
  "gettext" {= version}
  "ounit" {with-test & > "2.0.8"}
  "fileutils" {with-test}
]
depexts: [
  ["gettext"] {os = "macos" & os-distribution = "homebrew"}
  ["gettext"] {os = "macos" & os-distribution = "macports"}
  ["gettext"] {os = "win32" & os-distribution = "cygwinports"}
]
synopsis: "Internationalization using C gettext library (i18n)"
description:"""
See gettext package description.
"""
