opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/gildor478/ocaml-gettext"
dev-repo: "git+https://github.com/gildor478/ocaml-gettext.git"
bug-reports: "https://github.com/gildor478/ocaml-gettext/issues"
build: [
  [
    "./configure"
    "--disable-doc"
    "--prefix"
    prefix
    "--sbindir=%{lib}%/gettext/sbin"
    "--libexecdir=%{lib}%/gettext/libexec"
    "--sysconfdir=%{lib}%/gettext/etc"
    "--sharedstatedir=%{lib}%/gettext/com"
    "--localstatedir=%{lib}%/gettext/var"
    "--libdir=%{lib}%/gettext/lib"
    "--includedir=%{lib}%/gettext/include"
    "--datarootdir=%{lib}%/gettext/share"
  ]
  [
    "./configure"
    "--disable-doc"
    "--enable-test"
    "--prefix" prefix
    "--sbindir=%{lib}%/gettext/sbin"
    "--libexecdir=%{lib}%/gettext/libexec"
    "--sysconfdir=%{lib}%/gettext/etc"
    "--sharedstatedir=%{lib}%/gettext/com"
    "--localstatedir=%{lib}%/gettext/var"
    "--libdir=%{lib}%/gettext/lib"
    "--includedir=%{lib}%/gettext/include"
    "--datarootdir=%{lib}%/gettext/share"
  ] {with-test}
  [make "all"]
  [make "test"] {with-test}
]
remove: [
  ["rm" "-rf" "%{lib}%/gettext/share"]
  ["ocamlfind" "remove" "gettext-camomile"]
  ["ocamlfind" "remove" "gettext-stub"]
  ["ocamlfind" "remove" "gettext"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ounit"
  "fileutils"
  "camomile"
  "base-bytes"
  "batteries"
]
install: [make "install"]
synopsis:
  "Provides enough service to build a basic internationalized program"
flags: light-uninstall
