opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/gildor478/ocaml-gettext"
dev-repo: "git+https://github.com/gildor478/ocaml-gettext.git"
bug-reports: "https://github.com/gildor478/ocaml-gettext/issues"
build: [
  ["ocaml" "configure.ml"
    "--with-defaultlocaledir" "%{lib}%/gettext/share/locale"
    "--version" version]
  ["dune" "build" "-p" name "-j" jobs
   "@install"
   "@doc" {with-doc}
   "@runtest" {with-test} ]
]
depends: [
  "ocaml"
  "dune" {>= "1.11.0"}
  "fileutils"
  "base-bytes"
  "ounit" {with-test}
  "batteries" {with-test}
]
synopsis: "Internationalization and localization library (i18n and l10n)"
description:"""
This library enables string translation in OCaml. The API is based on GNU
gettext. It comes with a tool to extract strings which need to be translated
from OCaml source files.

This enables OCaml program to output string in the native language of
the user, if a corresponding translation file of the English strings is
provided.
"""
