opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/gildor478/ocaml-gettext"
dev-repo: "git+https://github.com/gildor478/ocaml-gettext.git"
bug-reports: "https://github.com/gildor478/ocaml-gettext/issues"
doc: "https://gildor478.github.io/ocaml-gettext/"
build: [
  ["ocaml" "configure.ml"
    "--with-defaultlocaledir" "%{lib}%/gettext/share/locale"
    "--version" version]
  ["dune" "build" "-p" name "-j" jobs
   "@install"
   "@doc" {with-doc}
   "@runtest" {with-test} ]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "2.9.0"}
  "cppo" {build & >= "1.8.0"}
  "ounit2" {with-test & >= "2.2.7"}
  "benchmark" {with-test & >= "1.6"}
  "fileutils" {>= "0.6.6"}
]
synopsis: "Internationalization library (i18n)"
description:"""
This library enables string translation in OCaml. The API is based on GNU
gettext. It comes with a tool to extract strings which need to be translated
from OCaml source files.

This enables OCaml program to output string in the native language of
the user, if a corresponding translation file of the English strings is
provided.
"""
