(library
 (name gettextStub)
 (public_name gettext-stub)
 (foreign_stubs
  (language c)
  (names gettextStubCompat_stubs)
  (flags
   :standard
   (:include c_flags.sexp)))
 (c_library_flags
  :standard
  (:include c_library_flags.sexp))
 (wrapped false)
 (libraries gettext.base gettext.extension))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover ../../tools/discover-stub/discover.exe))
 (action
  (run %{discover})))
